@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-22T08:21:48Z",
+  "timestamp" : "2022-07-22T16:25:33Z",
   "count_outdated" : 406,
   "uniques_outdated" : 233,
-  "count" : 430,
-  "uniques" : 249,
+  "count" : 431,
+  "uniques" : 250,
   "clones" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
